--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14822,12 +14822,12 @@ How:
 
 # Multilaser
 Multilaser:
-  regex: '(Multilaser[ _](?:[FE])|MS50G|M7[_-]3G[_-]PLUS)[);/ ]'
+  regex: '(Multilaser[ _](?:[FE])|MS50G|M7[_-]3G[_-]PLUS|MS45S_A6)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Multilaser[ _]([FE])[);/ ]' #P9118
       model: '$1'
-    - regex: '(MS50G)[);/ ]'
+    - regex: '(MS50G|MS45S_A6)[);/ ]'
       model: '$1'
     - regex: '(M7[_-]3G[_-]PLUS)[);/ ]'
       device: 'tablet'
