--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5180,7 +5180,7 @@ Hasee:
 
 # Hisense
 Hisense:
-  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|M470BS[AE]|E2281|EG680|HLTE([237]00T|200M|212T|22[13]E)'
+  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|M470BS[AE]|E2281|EG680|HLTE([237]00T|200M|212T|22[13]E|310M)'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -5203,6 +5203,8 @@ Hisense:
       model: 'Smartfren Andromax Z'
     - regex: 'HLTE200T[);/ ]'
       model: 'F26'
+    - regex: 'HLTE310M[);/ ]'
+      model: 'H18'
     - regex: '(HLTE300T|HLTE200M|HLTE212T)[);/ ]'
       model: '$1'
 
