--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2325,7 +2325,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346]A|V192[1348]A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V1936AL|V1950A'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346]A|V192[1348]A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V1936AL|V1950A|V2001A'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2406,6 +2406,8 @@ Vivo:
       model: 'X30'
     - regex: 'V1938T[);/ ]'
       model: 'X30 Pro'
+    - regex: 'V2001A[);/ ]'
+      model: 'X50'
     - regex: 'X9Plus[);/ ]'
       model: 'X9 Plus'
     - regex: 'vivo 1902[);/ ]'
