--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8314,4 +8314,25 @@
     model: X50
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; HLTE213T Build/OPM1.171019.026; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/63.0.3239.83 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 63.0.3239.83
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: HI
+    model: King Kong 4
+  os_family: Android
+  browser_family: Chrome
+
 
