--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8394,6 +8394,25 @@
     model: M8s
   os_family: Android
   browser_family: Chrome
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1; HLTE510T Build/OPM1.171019.026; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/48.0.2564.116 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "8.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 48.0.2564.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: HI
+    model: H20
+  os_family: Android
+  browser_family: Chrome
 
 
