--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14086,7 +14086,7 @@ X-TIGI:
 
 # Xiaolajiao
 Xiaolajiao:
-  regex: '(LA2-(?:L|S[N]?)|HLA Note3|20190416Q)[);/ ]'
+  regex: '(LA2-(?:L|S[N]?)|HLA Note3|20190416Q|20170608S)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'HLA Note3[);/ ]'
@@ -14095,6 +14095,8 @@ Xiaolajiao:
       model: '$1'
     - regex: '(20190416Q)[);/ ]'
       model: '$1'
+    - regex: '20170608S[);/ ]'
+      model: 'Red Pepper Plus'
 
 # Ritmix
 Ritmix:
