--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8991,7 +8991,7 @@ Onda:
 
 # OnePlus
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|A300[03]|A3010|A5000|A600[03]|A601[03]|E100[135]|GM191[03517]|GM190[013]|HD1910|HD190[01357]|IN2010)(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|A300[03]|A3010|A5000|A600[03]|A601[03]|E100[135]|GM191[03517]|GM190[013]|HD191[01]|HD190[01357]|IN2010)(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'GM191[03517]'
@@ -9000,7 +9000,7 @@ OnePlus:
       model: '7'
     - regex: 'HD190[01357]'
       model: '7T'
-    - regex: 'HD1910'
+    - regex: 'HD191[01]'
       model: '7T Pro'
     - regex: 'A0001'
       model: 'One'
