--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8774,3 +8774,23 @@
     model: Nut 3
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.0; zh-cn; M621C Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.126 MQQBrowser/10.4 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: QQ Browser
+    short_name: QQ
+    version: "10.4"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: M1
+    model: M5 Note
+  os_family: Android
+  browser_family: Unknown
