--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14827,7 +14827,7 @@ Prixton:
 
 # Newland
 Newland:
-  regex: '(NLS-MT90)[);/ ]'
+  regex: '(?:NLS-MT90)[);/ ]'
   device: 'smartphone'
   model: 'MT90 Orca'
 
