--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11297,58 +11297,61 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|605SH|901SH|305SH|506SH|SHL22|SHV4[34]|SHV35|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|605SH|901SH|305SH|506SH|SHL22|SHV4[034]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
-    - regex: '506SH'
+    - regex: '506SH[);/ ]'
       model: 'Aquos Xx3'
-    - regex: 'S3-SH'
+    - regex: 'S3-SH[);/ ]'
       model: 'One S3'
     - regex: 'SH-M05[);/ ]'
       model: 'Aquos Sense Lite'
-    - regex: 'SH-Z10'
+    - regex: 'SH-Z10[);/ ]'
       model: 'Aquos zero'
-    - regex: 'SH-Z01'
+    - regex: 'SH-Z01[);/ ]'
       model: 'Aquos S2 (C10)'
-    - regex: 'SH-02E'
+    - regex: 'SH-02E[);/ ]'
       model: 'Aquos Phone Zeta'
-    - regex: 'SH06D'
+    - regex: 'SH06D[);/ ]'
       model: 'Aquos Phone SH-06D'
-    - regex: 'SHL22'
+    - regex: 'SHL22[);/ ]'
       model: 'Aquos Phone SHL22'
-    - regex: '605SH'
+    - regex: '605SH[);/ ]'
       model: 'Aquos R'
-    - regex: 'SH-M09'
+    - regex: 'SH-M09[);/ ]'
       model: 'Aquos R2'
     - regex: 'SH-C02[);/ ]'
       model: 'Aquos V'
     - regex: '305SH[);/ ]'
       model: 'Aquos Crystal'
-    - regex: 'FS8010|SH-M08|SHV43'
+    - regex: 'SHV40[);/ ]'
+      model: 'Aquos S'
+    - regex: 'SHV38[);/ ]'
+      model: 'Aquos S Mini'
+    - regex: '(?:FS8010|SH-M08|SHV43)[);/ ]'
       model: 'Aquos S2'
     - regex: 'SHV44[);/ ]'
       model: 'Aquos R3'
-    - regex: 'FS8032'
+    - regex: 'FS8032[);/ ]'
       model: 'Aquos S3'
-    - regex: 'FS8018'
+    - regex: 'FS8018[);/ ]'
       model: 'Aquos S3 Mini'
     - regex: '901SH[);/ ]'
       model: 'Aquos S3 Plus'
     - regex: 'SHV35[);/ ]'
       model: 'Aquos U'
-    - regex: 'TG-L900S'
+    - regex: 'TG-L900S[);/ ]'
       model: 'Luna S'
-    - regex: 'FS8002'
+    - regex: 'FS8002[);/ ]'
       model: 'Z2'
-    - regex: 'FS8009'
+    - regex: 'FS8009[);/ ]'
       model: 'Z3'
-    - regex: 'FS8028'
+    - regex: 'FS8028[);/ ]'
       model: 'R1S'
 
-
     # explicit tablet models
-    - regex: 'SH-08E'
+    - regex: 'SH-08E[);/ ]'
       device: 'tablet'
       model: 'Sharp Aquos Pad'
 
