--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -9574,3 +9574,63 @@
     model: Aquos S Mini
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SO-03K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SO
+    model: Xperia XZ2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SO-02L) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.101 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SE
+    model: Xperia Ace
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SO-01M) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SO
+    model: Xperia 5
+  os_family: Android
+  browser_family: Chrome
